consumption/istio/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: gateway
  namespace: service-istio
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "service-istio.service-istio.svc.cluster.local"
  - port:
      number: 9080
      name: picop
      protocol: TCP
    hosts:
    - "proxy-both.service.svc.cluster.local"
